Bug 162031 - panel alignment isn't saved after logout/login
Summary: panel alignment isn't saved after logout/login
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-13 11:14 UTC by Fathi Boudra
Modified: 2008-05-13 13:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fathi Boudra 2008-05-13 11:14:53 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

panel alignment isn't saved after logout/login.
only the size is saved.
i used center alignment,logout/login, panel comes back to left alignment.
Comment 1 Marco Martin 2008-05-13 13:17:39 UTC
SVN commit 807225 by mart:

correctly saves and restores panel alignment and offset

BUG: 162031


 M  +32 -0     panelcontroller.cpp  
 M  +5 -0      panelcontroller.h  
 M  +6 -6      panelview.cpp  
 M  +0 -4      panelview.h  
 M  +3 -3      positioningruler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=807225