correctly saves and restores panel alignment and offset

BUG: 162031

svn path=/trunk/KDE/kdebase/workspace/; revision=807225